--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,35 +2,38 @@
     font-family: "DM Sans", sans-serif;
     background-color: #f8f8f8;
     min-height: 100vh;
-  }
+}
   
-  * {
+.Main {
+    padding-top: 81px;
+}
+* {
     box-sizing: border-box;
-  }
+}
   
-  a {
+a {
     color: #555555;
-    transition: color ease-in-out 0.2s;
-  }
-  
-  a:hover {
-    text-decoration: none;
-  }
-  
-  a:hover i {
-    color: #ea5c10;
     transition: color ease-in-out 0.3s;
-  }
+}
   
-  i {
+a:hover {
+    text-decoration: none;
+}
+  
+a:hover i {
+    color: #de7e1e;
+    transition: color ease-in-out 0.3s;
+}
+  
+i {
     color: #cfced3;
     font-size: 1.6rem;
     padding: 7px;
     vertical-align: middle;
-  }
+}
   
-  i:hover {
+i:hover {
     cursor: pointer;
     transition: color ease-in-out 0.3s;
-    color: #ea5c10;
-  }
+    color: #de7e1e;
+}
