--- a/src/styles/Comment.module.css
+++ b/src/styles/Comment.module.css
@@ -1,10 +1,10 @@
 .Owner {
     font-weight: bold;
-    color: #2142b2;
+    color: #b221a3;
     margin-right: 8px;
   }
   
   .Date {
     font-weight: lighter;
-    color: #c1c1c5;
+    color:#d2d2e9;
   }
