--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -16,11 +16,11 @@
 }
   
 .Button:hover:active {
-    background-color: #b221a3 !important;
+    background-color: #b221a3;
 }
   
 .Button:active {
-    background-color: #b221a3 !important;
+    background-color: #b221a3;
 }
   
 .Button:focus {
@@ -50,8 +50,8 @@
 .BlackOutline:hover {
     /* background-color: #242a3d;
     color: white; */
-    background-color: #242a3d;
-    color: aliceblue;
+    background-color: #b5bfe4;
+    color: #b221a3;
 }
   
 .Black:hover,
@@ -59,7 +59,7 @@
     /* background-color: #dadadf;
     color: #242a3d;
     border-color: #242a3d; */
-    background-color: aliceblue;
+    background-color: #b5bfe4;
     color: #242a3d;
 }
   
@@ -71,13 +71,13 @@
 .Green,
 .GreenOutline:hover,
 .Bright:hover {
-    background-color: rgb(167, 230, 171);
-    color: rgb(8, 181, 14);
+    background-color: rgb(167, 230, 171) !important;
+    color: rgb(8, 181, 14) !important;
 }
 
 .Red,
 .RedOutline:hover,
 .Bright:hover {
-    background-color: rgb(233, 165, 156);
-    color: rgb(233, 44, 19);
+    background-color: rgb(233, 165, 156) !important;
+    color: rgb(233, 44, 19) !important;
 }
